[package]
name = "rattlehead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.0.0-rc.3"
env_logger = "0.9.0"
