[package]
name = "rattlehead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.0.0-rc.3"
env_logger = "0.9.0"
serde = "1.0.136"
serde_json = "1.0.79"
actix-multipart = "0.4.0"
sanitize-filename = "0.3"
uuid = { version = "0.8", features = ["v4"] }